2015-07-25  6.9.2-0 Dirk Lemstra <dirk@lem.....org>
  * Added "-set colorspace:auto-grayscale=false" that will prevent automatic
    conversion to grayscale inside coders that support grayscale.

2015-07-25  6.9.1-10 Cristy  <quetzlzacatenango@image...>
  * New version 6.9.1-10, SVN revision 19269.

2015-07-20  6.9.1-10 Glenn Randers-Pehrson <glennrp@image...>
  * coders/magick.c: added "-define h:format=FMT" and
    "-define magick:format=FMT" options. FMT can be any output format
    supported by ImageMagick except "H" or "MAGICK". If this define is
    omitted, the encoder uses GIF by default for pseudoclass images and
    PNM for directclass images, as previously.  Made "MAGICK" (read-write)
    and "H" (write-only) visible in the format list.

2015-07-18  6.9.1-10 Dirk lemstra <dirk@lem.....org>
  * Removed incorrect EOF check in the DDS reader (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=28065).

2015-07-18  6.9.1-10 Cristy  <quetzlzacatenango@image...>
  * Fixed undefined behaviors (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=28067).
  * Return exception message for unknown image properties.
  * Color shift removed when reading transparent gray images (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=28081)

2015-07-18  6.9.1-9 Cristy  <quetzlzacatenango@image...>
  * New version 6.9.1-9, SVN revision 19200.

2015-07-12  6.9.1-9 Dirk Lemstra <dirk@lem.....org>
  * Fixed issue with radial gradient in MVG (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=27995).

2015-07-11  6.9.1-8 Cristy  <quetzlzacatenango@image...>
  * New version 6.9.1-8, SVN revision 19167.

2015-06-25  6.9.1-8 Cristy  <quetzlzacatenango@image...>
  * Correct install location of the Magick++ headers (reference
    https://github.com/ImageMagick/ImageMagick/pull/17/commits).
  * Different gif cropping behavior between versions (reference